<resources>
    <string name="change_to_number_lock">Switch to password lock</string>
    <string name="billing_feature_message">Premium Feature\n\n Get all the premium features for free now?\n</string>
    <string name="initialer_class">com.domobile.applock.theme.DefaultNumBoardInitialer</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="about">About</string>
    <string name="add_hided_images">Move photo into vault</string>
    <string name="add_hided_videos">Move video into vault</string>
    <string name="add_location_lock">Add Location Lock</string>
    <string name="add_one_item">Create a new %s</string>
    <string name="add_scenes">Add new profile</string>
    <string name="add_timer_lock">Add Time Lock</string>
    <string name="adtype_banner_message">Ads will be shown when you unlock the app.</string>
    <string name="adtype_banner_title">Banner ads</string>
    <string name="adtype_interstitial_message">Ads will be shown when you exit the app.</string>
    <string name="adtype_interstitial_title">Fullscreen ads</string>
    <string name="advance">Advance</string>
    <string name="advance_user">Premium</string>
    <string name="advance_user_monthly">%s/month</string>
    <string name="advance_user_yearly">%s/year</string>
    <string name="aerr_application">Unfortunately, %1$s has stopped.</string>
    <string name="after_screen_off">Until the screen is locked</string>
    <string name="album_image">Gallery</string>
    <string name="album_video">Gallery</string>
    <string name="all_protect">Lock all</string>
    <string name="all_unprotect">Unlock all</string>
    <string name="allow_short_exit">Allow a brief exit</string>
    <string name="allow_short_exit_info">Re-lock is not required when returning from a brief exit</string>
    <string name="app_details">Application Manage</string>
    <string name="app_details_info">Prevent uninstalling or force-stop application</string>
    <string name="app_lock">General</string>
    <string name="app_name">AppLock</string>
    <string name="applied_theme">%s Applied</string>
    <string name="applock_news">Messages</string>
    <string name="applock_profile_shortcut">Profile Switcher</string>
    <string name="applock_rate_message">Like %s ? Please share it with your friends.</string>
    <string name="apply_theme">Apply</string>
    <string name="are_you_sure_delete">Are you sure you want to delete %s ？</string>
    <string name="are_you_sure_startup_scenes">Do you want to activate %s ？</string>
    <string name="ask_install_protector">Only three steps, perfect protection and more secure! Do you want to enable advanced protection now?</string>
    <string name="ask_save_when_back">Save?</string>
    <string name="ask_share_theme">Share with your friends, free to use the new theme!</string>
    <string name="atleast_one_operation">No operation been selected</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="back">Back</string>
    <string name="be_success">%s was successful.</string>
    <string name="billing_ad_mode">AD</string>
    <string name="billing_ad_mode_summary">Enjoy premium features for free and watch ads to support us!</string>
    <string name="billing_advance_user_now">You have upgraded to premium user with all the premium features.</string>
    <string name="billing_free_mode">Basic</string>
    <string name="billing_free_mode_summary">Premium features are not available.</string>
    <string name="billing_not_supported_message">The Market billing service is currently unavailable. Please try again later.</string>
    <string name="binlling_center">Account Center</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bookmark_list_title">Bookmarks</string>
    <string name="bookmark_name">Name</string>
    <string name="bookmark_url">URL</string>
    <string name="browser_action_forward">Forward</string>
    <string name="browser_input_hint">Search or type URL</string>
    <string name="cache_size_label">Cache</string>
    <string name="calculating_size">Calculating…</string>
    <string name="cancel_all_medias_action">Are you sure you want to cancel the operation？</string>
    <string name="cancel_subscription">Unsubscribe</string>
    <string name="change_language_must_restart_app">The language will be in effect after AppLock is restarted.</string>
    <string name="change_scenes_mode_msg">Change Profile</string>
    <string name="change_to_pattern_lock">switch to pattern lock</string>
    <string name="changelog">Version History</string>
    <string name="choose_language">Choose your language</string>
    <string name="clear">Clear</string>
    <string name="clear_cache_btn_text">Clear cache</string>
    <string name="clear_data_dlg_text">All this app\'s data will be deleted permanently. This includes all files, settings, accounts, databases, etc.</string>
    <string name="clear_data_dlg_title">Delete app data?</string>
    <string name="clear_user_data_text">Clear data</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_all_protect">Are you sure you want to %s ？</string>
    <string name="confirm_delete_message">The picture will be completely deleted and can not be recovered.</string>
    <string name="confirm_delete_title">Delete</string>
    <string name="confirm_delete_video_message">The video will be completely deleted and can not be recovered.</string>
    <string name="confirm_hide_medias">Are you sure you want to move it into vault?</string>
    <string name="confirm_password_not_same">confirmation password is incorrect</string>
    <string name="confirm_revert_medias">Are you sure you want to move it out of vault?</string>
    <string name="currently_selected">Currently selected:</string>
    <string name="data_size_label">Data</string>
    <string name="database_open_error_content">Database file has been damaged, please re-install %s !</string>
    <string name="database_open_error_title">Database error</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="default_language">System Language</string>
    <string name="default_profile">Unlock All</string>
    <string name="delete">Delete</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="deleting_media">Deleting：%s</string>
    <string name="desc_switcher_lock">Prevent turning on/off the switch</string>
    <string name="deselect_all">Deselect all</string>
    <string name="desktop_shortcut">Shortcut</string>
    <string name="details">Details</string>
    <string name="details_date_taken">Date taken:</string>
    <string name="details_duration">Duration:</string>
    <string name="details_file_size">File size:</string>
    <string name="details_image_resolution">Resolution:</string>
    <string name="device_admin">Advanced Protection</string>
    <string name="device_admin_disabled_warning">Note: this will greatly reduce the application security</string>
    <string name="device_admin_summary">Activate now, perfect protection and more secure!</string>
    <string name="dialy_promt">Daily App</string>
    <string name="disable_power_save_mode_warning">Note: Turn off Power saving mode will consume more power.</string>
    <string name="domo_center">eCenter</string>
    <string name="domo_exit_tip">Exit ?</string>
    <string name="domo_help">Help</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="share">Share</string>
</resources>