<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@c1133a/toolbar_trash" android:id="@id/gallery_toolbar_menu_delete" android:orderInCategory="1" android:title="@string/delete" />
    <item android:icon="@c1133a/toolbar_unlock" android:id="@id/gallery_toolbar_menu_revert" android:orderInCategory="2" android:title="@c1137e/revert" />
    <item android:icon="@drawable/toolbar_share" android:id="@id/gallery_toolbar_menu_share" android:orderInCategory="3" android:title="@string/share" />
    <item android:icon="@c1133a/toolbar_details" android:id="@id/gallery_toolbar_menu_detail" android:orderInCategory="4" android:title="@c1137e/details" />
    <item android:icon="@c1133a/toolbar_rotate_left" android:id="@id/gallery_toolbar_menu_rotate_left" android:visible="true" android:orderInCategory="5" android:title="@string/rotate_left" />
    <item android:icon="@c1133a/toolbar_rotate_right" android:id="@id/gallery_toolbar_menu_rotate_right" android:visible="true" android:orderInCategory="6" android:title="@string/rotate_right" />
</menu>
